disable weather widget

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -12,7 +12,7 @@
     "sway/mode"
   ],
   "modules-right": [
-    "custom/weather",
+    // "custom/weather",
     "custom/wlsunset",
     "custom/playerctl",
     // "custom/scratchpad",
