--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,7 +36,7 @@ set -g @plugin 'catppuccin/tmux'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 
-set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+set -g @catppuccin_flavor 'mocha' # or frappe, macchiato, mocha
 set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
 set -g @catppuccin_window_current_text "#W" # use "#W" for application instead of directory
 
