--- a/sway/.config/sway/config.d/custom.conf
+++ b/sway/.config/sway/config.d/custom.conf
@@ -42,4 +42,5 @@ bindsym $mod+Shift+agrave move container to workspace number $ws10
 bindsym $mod+g exec $BROWSER
 bindsym $mod+m exec kg
 bindsym $mod+y exec dsp
+bindsym $mod+x exec bemoji
 
