add display shortcut

--- a/sway/.config/sway/config.d/custom.conf
+++ b/sway/.config/sway/config.d/custom.conf
@@ -39,9 +39,10 @@ bindsym $mod+Shift+underscore move container to workspace number $ws8
 bindsym $mod+Shift+ccedilla move container to workspace number $ws9
 bindsym $mod+Shift+agrave move container to workspace number $ws10
 
-bindsym $mod+g exec $BROWSER
+bindsym $mod+g exec google-chrome
 bindsym $mod+m exec kg
 bindsym $mod+y exec dsp
 bindsym $mod+x exec bemoji
+bindsym $mod+Shift+w exec wlr-randr --output eDP-1 --on --scale 1.1
 
-exec wlr-randr --output eDP-1 --on
+exec wlr-randr --output eDP-1 --on --scale 1.1
