--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,10 +3,13 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
+
 # Enable mouse
 set -g mouse on
+
 bind-key -n C-l next
 bind-key -n C-h prev
+
 bind -n M-l next-window
 bind -n M-h previous-window
 bind -n M-1 select-window -t 1
@@ -18,6 +21,12 @@ bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-a new-window
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
