add cron to sync obsidian

--- a/sway/.config/sway/config.d/custom.conf
+++ b/sway/.config/sway/config.d/custom.conf
@@ -46,4 +46,4 @@ bindsym $mod+x exec bemoji
 bindsym $mod+Shift+w exec wlr-randr --output eDP-1 --on --scale 1.1
 bindsym $mod+Shift+o exec obsidian-wayland
 
-exec wlr-randr --output eDP-1 --on --scale 1.1
+exec $WLRANDER
