--- a/cursor/.config/Cursor/User/settings.json
+++ b/cursor/.config/Cursor/User/settings.json
@@ -4,5 +4,32 @@
   "editor.lineNumbers": "relative",
   "files.autoSave": "afterDelay",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "workbench.sideBar.location": "right"
+  "workbench.sideBar.location": "right",
+  "prettier.documentSelectors": ["**/*.feature"],
+  "cucumber.features": [
+    "src/test/**/*.feature",
+    "features/**/*.feature",
+    "tests/**/*.feature",
+    "*specs*/**/*.feature"
+  ],
+  "cucumber.glue": [
+    "**/*-steps.ts",
+    "*specs*/**/*.cs",
+    "features/**/*.js",
+    "features/**/*.jsx",
+    "features/**/*.php",
+    "features/**/*.py",
+    "features/**/*.rs",
+    "features/**/*.rb",
+    "features/**/*.ts",
+    "features/**/*.tsx",
+    "features/**/*_test.go",
+    "src/test/**/*.java",
+    "tests/**/*.py",
+    "tests/**/*.rs"
+  ],
+  "workbench.colorTheme": "Glance (rainglow)",
+  "editor.fontFamily": "'ComicShannsMono Nerd Font','Droid Sans Mono', 'monospace', monospace",
+  "window.zoomLevel": 1,
+  "editor.fontSize": 15
 }
